# db-report-generator

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  input-source.yaml  main.py  pyproject.toml  requirements.txt  steps.txt  test-art.yaml
config/: config.py
db-report-generator/src/config/: config.py
dbreportgenerator/: cli.py
dbreportgenerator/src/excel/: writer.py
excel/: writer.py
infra/argo/: ingress.yaml  values.yaml
pdf_report/: parser.py
